--- a/ci/kubo-deployment-current-branch.yml
+++ b/ci/kubo-deployment-current-branch.yml
@@ -218,6 +218,7 @@ jobs:
       passed: [ 'build-kubo-release' ]
   - task: deploy
     file: git-kubo-deployment/ci/tasks/deploy-k8s-instance.yml
+    input_mapping: {s3-kubo-release-tarball: s3-kubo-release-tarball-tmp}
     params:
       ROUTING_CF_CLIENT_SECRET: {{routing_cf_client_secret}}
     on_failure:
