add route sync labels to nginx ci spec [#137357741]

--- a/ci/specs/nginx.yml
+++ b/ci/specs/nginx.yml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   labels:
     name: nginx
+    tcp-route-sync: "true"
+    http-route-sync: "true"
   name: nginx
 spec:
   ports:
