--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -53,10 +53,10 @@ instance_groups:
         app_domain: ((routing-cf-app-domain-name))
       nats:
         machines:
-        - ((internal_ip))
+        - ((routing_cf_nats_internal_ip))
         port: 4222
         user: nats
-        password: ((nats_password))
+        password: ((routing-cf-nats-password))
 
   - name: kubernetes-api
     release: kubo
