--- a/softlayer/cloud-config.yml
+++ b/softlayer/cloud-config.yml
@@ -2,6 +2,12 @@ azs:
 - name: z1
   cloud_properties:
     datacenter: { name: ((sl_datacenter)) }
+- name: z2
+  cloud_properties:
+    datacenter: { name: ((sl_datacenter)) }
+- name: z3
+  cloud_properties:
+    datacenter: { name: ((sl_datacenter)) }
 
 vm_types:
 - name: default
@@ -17,6 +23,8 @@ vm_types:
       name: ((sl_datacenter))
 
 disk_types:
+- name: default
+  disk_size: 100_000
 - name: small
   disk_size: 20_000
 - name: large
@@ -28,7 +36,7 @@ networks:
   subnets:
   - range: ((internal_cidr))
     gateway: ((internal_gw))
-    azs: [z1]
+    azs: [z1, z2, z3]
     dns: [((internal_ip)), 8.8.8.8, 10.0.80.11, 10.0.80.12]
     static: ((internal_static_ips))
     reserved: ((internal_reserved_ips))
