--- a/ci/kubo-deployment-current-branch.yml
+++ b/ci/kubo-deployment-current-branch.yml
@@ -123,6 +123,33 @@ resources:
     url: {{slack-url}}
 
 jobs:
+- name: run-unit-tests
+  plan:
+  - get: git-kubo-deployment
+    version: every
+  - get: git-kubo-release
+    version: every
+  - task: run-release-unit-tests
+    file: git-kubo-deployment/ci/tasks/run-release-unit-tests.yml
+    on_failure:
+      put: slack-alert
+      params:
+        silent: true
+        icon_emoji: ":thumbsdown:"
+        text: |
+          Kubo release unit tests failed:
+          https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+  - task: run-deployment-unit-tests
+    file: git-kubo-deployment/ci/tasks/run-deployment-unit-tests.yml
+    on_failure:
+      put: slack-alert
+      params:
+        silent: true
+        icon_emoji: ":thumbsdown:"
+        text: |
+          Kubo deployment unit tests failed:
+          https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+
 - name: claim-lock
   max_in_flight: 1
   plan:
