--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -45,8 +45,8 @@ instance_groups:
     release: kubo
     properties:
       cloud_foundry:
-        api_url: ((routing-cf-api-url))
         uaa_url: ((routing-cf-uaa-url))
+        routing_api_url: ((routing-cf-api-url))
         routing_api_client_id: ((routing-cf-client-id))
         routing_api_client_secret: ((routing-cf-client-secret))
         skip_tls_verification: true
