Pass NATS password to pipeline
+ fix shellcheck issues
+ no need to pass DNS name to set password command

[#137357741]

--- a/ci/tasks/deploy-k8s-instance.yml
+++ b/ci/tasks/deploy-k8s-instance.yml
@@ -6,6 +6,7 @@ image_resource:
     tag: stable
 params:
   ROUTING_CF_CLIENT_SECRET:
+  ROUTING_CF_NATS_INTERNAL_IP:
 run:
   path: git-kubo-deployment/ci/scripts/deploy-k8s-instance.sh
 
