Generate manifest tests
[#141626775]

Signed-off-by: Oleksandr Slynko <oslynko@pivotal.io>

--- a/src/kubo-deployment-tests/resources/test_gcp/director-secrets.yml
+++ b/src/kubo-deployment-tests/resources/test_gcp/director-secrets.yml
@@ -1,2 +1,2 @@
 
-routing-cf-client-secret: # UAA client secret for routing client
+routing-cf-client-secret: cf.client.secret # UAA client secret for routing client
