--- a/src/kubo-deployment-tests/resources/test_gcp/director.yml
+++ b/src/kubo-deployment-tests/resources/test_gcp/director.yml
@@ -8,12 +8,12 @@ zone: # name of GCP zone
 
 internal_ip: # Internal ip address of the BOSH director. Please select an available ip address in the network you wish to deploy into. 
 
-deployments_network: # Network name to deploy service in your cloud config
+deployments_network: network-name # Network name to deploy service in your cloud config
 
-cf-tcp-router-name: # Hostname of TCP router. Use `cf domains` to find existing TCP domain. If none exists, see https://docs.cloudfoundry.org/devguide/deploy-apps/routes-domains.html#shared-domains for instructions to create one.
-routing-cf-api-url: # TCP routing API URL. In PCF: https://api.<system domain>
-routing-cf-client-id: # Routing UAA client name that will be used to register tcp routes
-routing-cf-uaa-url: # Routing UAA URL In PCF: https://uaa.<system domain>
+cf-tcp-router-name: a.router.name # Hostname of TCP router. Use `cf domains` to find existing TCP domain. If none exists, see https://docs.cloudfoundry.org/devguide/deploy-apps/routes-domains.html#shared-domains for instructions to create one.
+routing-cf-api-url: cf.api.url # TCP routing API URL. In PCF: https://api.<system domain>
+routing-cf-client-id: cf.client.id # Routing UAA client name that will be used to register tcp routes
+routing-cf-uaa-url: cf.uaa.url # Routing UAA URL In PCF: https://uaa.<system domain>
 
 # we use BOSH 261 since CredHub 0.4 supports only it
 # CredHub 0.4 fixes important bug that breaks deployment
@@ -24,12 +24,12 @@ credhub_encryption_key: # 16 byte number in HEX format: i.e. ABCDEF0123456789ABC
 
 internal_cidr: # CIDR range that BOSH will deploy to
 internal_gw: # internal gateway
-external-kubo-port: # Port to use for Kubernetes API
+external-kubo-port: 101928 # Port to use for Kubernetes API
 
 director_name: # user friendly Director name
 dns_recursor_ip: # DNS IP address for resolving non-BOSH hostnames
 
-stemcell_version: # version of the stemcell used in all Kubo deployments. Quote the version to satisfy YAML parsers
+stemcell_version: stemcell.version # version of the stemcell used in all Kubo deployments. Quote the version to satisfy YAML parsers
 stemcell_url: # path to a stemcell used in all Kubo deployments
 
 credhub_release_url: https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz
