--- a/ci/kubo-deployment-pr.yml
+++ b/ci/kubo-deployment-pr.yml
@@ -56,7 +56,7 @@ resources:
     bucket: kubo-pipeline-store
     endpoint: s3-eu-west-1.amazonaws.com
     region_name: eu-west-1
-    versioned_file: bosh/service-ci-service-creds.yml
+    versioned_file: bosh/ci-service-creds.yml
 
 - name: s3-kubo-release-tarball
   type: s3
@@ -189,7 +189,7 @@ jobs:
   - aggregate:
     - put: s3-service-creds
       params:
-        file: service-creds/service-ci-service-creds.yml
+        file: service-creds/ci-service-creds.yml
 
 - name: deploy-workload
   plan:
