--- a/ci/kubo-release-pr.yml
+++ b/ci/kubo-release-pr.yml
@@ -63,7 +63,7 @@ resources:
     bucket: kubo-pipeline-store
     endpoint: s3-eu-west-1.amazonaws.com
     region_name: eu-west-1
-    versioned_file: bosh/service-ci-service-creds.yml
+    versioned_file: bosh/ci-service-creds.yml
 
 - name: s3-kubo-release-tarball
   type: s3
@@ -209,7 +209,7 @@ jobs:
     on_failure: *on_failure
   - put: s3-service-creds
     params:
-      file: service-creds/service-ci-service-creds.yml
+      file: service-creds/ci-service-creds.yml
 
 - name: deploy-workload
   plan:
